--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>sewa.se</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <link rel="stylesheet" href="style.css" type="text/css"/>
   <script type="text/javascript">
 
     var _gaq = _gaq || [];
@@ -20,12 +18,10 @@
 
   </script>
 </head>
-
-
 <body>
+<div class="wrapper">
   <div class="intro">
     <h1>sewa.se</h1>
-
     <p>
       Hello! I'm Sebastian Wallin and it's time to make a personal homepage.
     </p>
@@ -37,53 +33,53 @@
     <h2>Some of my stuff</h2>
     <ul>
       <li class="first">
-        <img src="icon/kollektivt.png" alt="kollektivt.se">
+        <img src="icon/kollektivt.png" alt="kollektivt.se"/>
         <h3>Kollektivt.se</h3>
-        <a href="http://kollektivt.se/" target="_new">http://kollektivt.se</a>
+        <a href="http://kollektivt.se/" class="more" target="_new">http://kollektivt.se</a>
         <p>Site trying to emulate real time GPS koordinates of busses in central Malmö. Developed by me and some friends in 24h at <a href="http://www.codemocracy.se" target="_new">Codemocracy</a></p>
       </li>
       <li>
-        <img src="icon/resultatjakt.png" alt="Resultatjakt">
+        <img src="icon/resultatjakt.png" alt="Resultatjakt"/>
         <h3>Resultatjakt</h3>
-        <a href="http://resultatjakt.se/" target="_new">http://resultatjakt.se</a>
+        <a href="http://resultatjakt.se/" class="more" target="_new">http://resultatjakt.se</a>
         <p>Site for aggregating sport results and showing interesting stats. Provides a top list for those who have done the "svensk klassiker"</p>
       </li>
       <li class="last">
-        <img src="icon/spchark.png" alt="SP chark">
+        <img src="icon/spchark.png" alt="SP chark"/>
         <h3>SP Chark</h3>
-        <a href="http://spchark.se/home/" target="_new">http://spchark.se/home/</a>
+        <a href="http://spchark.se/home/" class="more" target="_new">http://spchark.se/home/</a>
         <p>A website I made for a swedish meat company. (My apologies to all you vegetarians out there)</p>
       </li>
       <!-- New line //-->
       <li class="first">
-        <img src="icon/growl.png" alt="jQuery growl plugin">
-        <h3>Simple jQuery growl plugin</h3>
-        <a href="http://sewa.se/code/javascript/growl/" target="_new">http://sewa.se/code/javascript/growl/</a>
+        <img src="icon/growl.png" alt="jQuery growl plugin"/>
+        <h3>jQuery growl plugin</h3>
+        <a href="http://sewa.se/code/javascript/growl/" class="more" target="_new">http://sewa.se/code/javascript/growl/</a>
         <p>A very lightweight growl-like notification plugin for jQuery. Mainly written for use in Dogvibes</p>
       </li>
       <li>
-        <img src="icon/dogvibes.png" alt="Dogvibes logo">
+        <img src="icon/dogvibes.png" alt="Dogvibes logo"/>
         <h3>Dogvibes</h3>
-        <a href="http://code.google.com/p/dogvibes" target="_new">http://code.google.com/p/dogvibes</a>
+        <a href="http://code.google.com/p/dogvibes" class="more" target="_new">http://code.google.com/p/dogvibes</a>
         <p>Project trying to create a social music player based on G-streamer and Spotify.</p>
       </li>
       <li class="last">
-        <img src="icon/popdevelop.png" alt="Popdevelop">
+        <img src="icon/popdevelop.png" alt="Popdevelop"/>
         <h3>Popdevelop</h3>
-        <a href="http://www.popdevelop.com" target="_new">http://www.popdevelop.com</a>
+        <a href="http://www.popdevelop.com" class="more" target="_new">http://www.popdevelop.com</a>
         <p>Me and my friends started a company in 2011. Follow the saga! </p>
       </li>
       <!-- New line //-->
       <li class="first">
-        <img src="icon/blogger.gif" alt="Malen">
+        <img src="icon/blogger.gif" alt="Malen"/>
         <h3>Malen</h3>
-        <a href="http://malen2010.blogspot.com/" target="_new">http://malen2010.blogspot.com</a>
+        <a href="http://malen2010.blogspot.com/" class="more" target="_new">http://malen2010.blogspot.com</a>
         <p>Creating a portable and efficient stereo for outdoor use. Primarily for use at Roskilde festival 2010. Comes with a built in giant LED VU-meter =)</p>
       </li>
       <li class="last">
-        <img src="icon/googlecode.png" alt="LEDTicker">
+        <img src="icon/googlecode.png" alt="LEDTicker"/>
         <h3>LEDTicker</h3>
-        <a href="http://code.google.com/p/ledticker/" target="_new">http://code.google.com/p/ledticker</a>
+        <a href="http://code.google.com/p/ledticker/" class="more" target="_new">http://code.google.com/p/ledticker</a>
         <p>Simple library for the Arduino (ATMega328) microcontroller trying to facilitate creating LED patterns.</p>
       </li>
     </ul>
@@ -93,19 +89,19 @@
     <ul>
 
       <li class="first">
-        <img src="icon/linkedin.png" alt="Linked In">
+        <img src="icon/linkedin.png" alt="Linked In"/>
         <h3>LinkedIn</h3>
         <a href="http://se.linkedin.com/in/sebwal" target="_new">http://se.linkedin.com/in/sebwal</a>
         <p>The serious me.</p>
       </li>
       <li>
-        <img src="icon/lastfm.png" alt="Last.fm">
+        <img src="icon/lastfm.png" alt="Last.fm"/>
         <h3>Last.fm</h3>
         <a href="http://www.last.fm/user/jimtegel" target="_new">http://www.last.fm/user/jimtegel</a>
         <p>All the music I listen to.</p>
       </li>
       <li class="last">
-        <img src="icon/youtube.gif" alt="Youtube">
+        <img src="icon/youtube.gif" alt="Youtube"/>
         <h3>Youtube</h3>
         <a href="http://www.youtube.com/jimtegel" target="_new">http://www.youtube.com/jimtegel</a>
         <p>My videos on the tube. Mostly LED related stuff</p>
@@ -119,6 +115,8 @@
       <span class="email">e-mail: &lt;firstname&gt;.&lt;lastname&gt;@gmail.com</span>
     </address>
   </div>
+  <div class="clear"></div>
+</div>
 </body>
 
 </html>
