Some minor tweaks for IE

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img src="icon/blogger.gif" alt="Malen"/>
         <h3>Malen</h3>
         <a href="http://malen2010.blogspot.com/" class="more" target="_new">http://malen2010.blogspot.com</a>
-        <p>Creating a portable and efficient stereo for outdoor use. Primarily for use at Roskilde festival 2010. Comes with a built in giant LED VU-meter =)</p>
+        <p>A portable and efficient stereo for outdoor use with a built in giant LED VU-meter. Mainly for use at Roskilde festival 2010.</p>
       </li>
       <li class="last">
         <img src="icon/googlecode.png" alt="LEDTicker"/>
