github instead of youtube

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>sewa.se</title>
+  <title>Sebastian Wallin &mdash; sewa.se</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <link rel="stylesheet" href="style.css" type="text/css"/>
   <script type="text/javascript">
 
@@ -101,10 +102,10 @@
         <p>All the music I listen to.</p>
       </li>
       <li class="last">
-        <img src="icon/youtube.gif" alt="Youtube"/>
-        <h3>Youtube</h3>
-        <a href="http://www.youtube.com/jimtegel" target="_new">http://www.youtube.com/jimtegel</a>
-        <p>My videos on the tube. Mostly LED related stuff</p>
+        <img src="icon/github.png" alt="Youtube"/>
+        <h3>Github</h3>
+        <a href="https://github.com/wallin" target="_new">https://github.com/wallin</a>
+        <p>My stash for all sorts of code</p>
       </li>
     </ul>
   </div>
