--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
   <div class="intro">
     <h1>sewa.se</h1>
     <p>
-      Hello! I'm Sebastian Wallin and it's time to make a personal homepage.
-    </p>
-    <p>
-      Please check back soon!
+      Hello! I'm Sebastian Wallin. I like tinkering
     </p>
   </div>
   <div class="items">
