--- a/index.html
+++ b/index.html
@@ -1,117 +1,95 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7]>    <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8]>    <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class='no-js' lang='en'>
-<!--<![endif]-->
+<html lang="en">
 <head>
-<meta charset='utf-8'>
-<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-<meta content='V4j4taRI5g9XOKLnYNX72HyEAo83xPeP5ROGW87lcrY' name='google-site-verification'>
-<title>Sebastian Wallin</title>
-<link href="stylesheets/all-ba20843b.css" media="screen" rel="stylesheet" type="text/css" />
-<!--[if lt IE 9]>
-<script src='http://html5shim.googlecode.com/svn/trunk/html5.js'></script>
-<![endif]-->
-</head>
-<body class='index'>
-<div class='wrapper'>
-<div class='intro'>
-<h1>sewa.se</h1>
-<p>
-Hello! I'm Sebastian Wallin, a web developer and tinkerer. Here is some of my stuff.
-</p>
-</div>
-<h2>Web</h2>
-<div class='items'>
-<ul>
-<li class='first'>
-<img alt="Resultatjakt" src="images/icon/resjakt-4cb54a6b.png" />
-<h3>Resultatjakt</h3>
-<a class='more' href='http://resultatjakt.se/' target='_new'>http://resultatjakt.se</a>
-<p>The largest top list in Sweden for those who have completed "en svensk klassiker"</p>
-</li>
-<li>
-<img alt="Angular JS plugin for Gravatar" src="images/icon/angular-10831fff.png" />
-<h3>angular-gravatar</h3>
-<a class='more' href='http://wallin.github.io/angular-gravatar/' target='_new'>http://wallin.github.io/angular-gravatar/</a>
-<p>An Angular JS directive for generating Gravatar images</p>
-</li>
-<li class='last'>
-<img alt="jQuery growl plugin" src="images/icon/growl-a5a790ac.png" />
-<h3>jQuery growl plugin</h3>
-<a class='more' href='http://wallin.github.io/jquery-growl/' target='_new'>http://wallin.github.io/jquery-growl/</a>
-<p>A very lightweight growl-like notification plugin for jQuery.</p>
-</li>
-</ul>
-</div>
-<h2>Electronics</h2>
-<div class='items'>
-<ul>
-<li class='first'>
-<img alt="Malen 2010" src="images/icon/blogger-12f26deb.gif" />
-<h3>Malen 2010</h3>
-<a class='more' href='http://malen2010.blogspot.com/' target='_new'>http://malen2010.blogspot.com</a>
-<p>A portable and efficient stereo for outdoor use with a built in giant LED VU-meter. Mainly for use at Roskilde festival 2010.</p>
-</li>
-<li>
-<img alt="Malen 2013" src="images/icon/tumblr-39d67a78.png" />
-<h3>Malen 2013</h3>
-<a class='more' href='http://malen2013.tumblr.com/' target='_new'>http://malen2013.tumblr.com/</a>
-<p>An even more portable boomblaster with focus on extreme portablility and high output.</p>
-</li>
-<li class='last'>
-<img alt="LEDTicker" src="images/icon/googlecode-9451a2ac.png" />
-<h3>LEDTicker</h3>
-<a class='more' href='http://code.google.com/p/ledticker/' target='_new'>http://code.google.com/p/ledticker</a>
-<p>Simple library for the Arduino (ATMega328) microcontroller trying to facilitate creating LED patterns.</p>
-</li>
-</ul>
-</div>
-<h2 class='clear'>The social networks</h2>
-<div class='items social'>
-<ul>
-<li class='first'>
-<img alt="Linked in" src="images/icon/linkedin-da90451f.png" />
-<h3>LinkedIn</h3>
-<a href='http://se.linkedin.com/in/sebwal' target='_new'>http://se.linkedin.com/in/sebwal</a>
-<p>The serious me.</p>
-</li>
-<li>
-<img alt="Github" src="images/icon/github-80d21acb.png" />
-<h3>Github</h3>
-<a href='https://github.com/wallin' target='_new'>https://github.com/wallin</a>
-<p>My stash for all sorts of code</p>
-</li>
-<li class='last'>
-<img alt="Youtube" src="images/icon/youtube-02a5426a.gif" />
-<h3>Youtube</h3>
-<a href='http://www.youtube.com/jimtegel' target='_new'>http://www.youtube.com/jimtegel</a>
-<p>My videos. Mostly LED stuff and couple of NES playlists</p>
-</li>
-</ul>
-</div>
-<div id='footer'>
-<h3>Contact me</h3>
-<address>
-<span class='phone'>tel: +46 - 701 73 99 39</span>
-<span class='email'>e-mail: &lt;firstname&gt;.&lt;lastname&gt;@gmail.com</span>
-</address>
-</div>
-<div class='clear'></div>
-</div>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>wallin.io</title>
 
+<script src="https://use.fontawesome.com/119dcfea6f.js"></script>
+
+  <style type="text/css">
+    a {
+      text-decoration: none;
+      color: #b6d8f6;
+    }
+
+    body {
+      font-family: "Helvetica Neue", Arial, sans-serif;
+      color: #fff;
+      background-color: #0D111A;
+      margin-top: 100px;
+    }
+
+    body p {
+      margin: 0 auto;
+      color: #FFF;
+      text-align: center;
+    }
+
+    body p.logo {
+      font-size: 80px;
+      font-weight: 900;
+      line-height: 1;
+      /* letter-spacing: -2pt; */
+      text-rendering: optimizeLegibility;
+      /* font-family: 'Helvetica', cursive; */
+      background: -webkit-linear-gradient(45deg, #5cb3ed, #ef3784);
+      text-shadow: 0 0 2vw rgba(255,255,255,0.2);
+      -webkit-background-clip: text; /* Doesn't work on IE*/
+        -moz-background-clip: text;
+              background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    body p.social {
+      font-size: 30px;
+      margin-top: 20px;
+    }
+
+    body p.social i {
+      margin: 5px;
+    }
+
+    body p.woodworking {
+      margin-top: 1.5em;
+    }
+    body p.woodworking a:hover {
+      text-decoration: underline;
+    }
+
+    /* https://codersblock.com/blog/creating-glow-effects-with-css/ */
+    div {
+  position: absolute;
+  top: calc(40% - 150px);
+  left: calc(50% - 150px);
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  opacity: 0.3;
+  box-shadow:
+    inset 0 0 50px #fff,
+    inset 20px 0 80px #f0f,
+    inset -20px 0 80px #0ff,
+    inset 20px 0 300px #f0f,
+    inset -20px 0 300px #0ff,
+    0 0 50px #fff,
+    -10px 0 80px #f0f,
+    10px 0 80px #0ff;
+}
+  </style>
+</head>
+<body>
+  <p class="logo">sebastian<br>wallin</p>
+  <p class="social">
+    <a href="https://linkedin.com/in/sebwal" target="_blank">
+      <i class="fa fa-linkedin-square"></i>
+    </a>
+    <a href="https://github.com/wallin" target="_blank">
+      <i class="fa fa-github-square"></i>
+    </a>
+  </p>
+  <p class="woodworking">
+    <a href="https://wood.wallin.io">Follow my woodworking!</a>
+  </p>
 </body>
-<script>
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-7232273-8']);
-  _gaq.push(['_trackPageview']);
-  
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
 </html>
